Fix alignment

--- a/style.css
+++ b/style.css
@@ -480,7 +480,7 @@ body {
   vertical-align: middle;
 }
 .header__title {
-  font-size: 18px;
+  font-size: 15px;
   margin: 0;
   margin-left: 10px;
   display: inline-block;
@@ -755,7 +755,7 @@ body {
     margin: 0;
     display: inline-block;
     margin-right: 10px;
-    margin-top: 10px;
+    margin-top: 20px;
   }
   .header__container {
     width: 100%;
